--- a/mluvnice/01-podstatná-jména.tex
+++ b/mluvnice/01-podstatná-jména.tex
@@ -21,9 +21,13 @@ se takovým označením zvíře rozumí jedině tehdy, je-li osobou.
 (Což v realitě nastává velmi zřídka, ve fikci, obzvláště té pro děti,
 je to častější.)
 
-Z podstatných jmen pátého rodu lze skloňovat pouze ta, která končí „-x“
-nebo „-ks“ (ostatní zůstávají nesklonná); skloňují se podle vzoru \emph{studenx}:
+Z podstatných jmen pátého rodu lze skloňovat pouze ta, která končí „-x“,
+„-ks“ nebo „-a“, ostatní zůstávají nesklonná. Jména zakončená „-x“ nebo
+„-ks“ se skloňují v jednotném i množném čísle dle vzoru \emph{studenx},
+jména zakončená „-a“ se skloňují jen v jednotném čísle dle vzoru
+\emph{Opera}.
 
+\subsection{Vzor studenx}
 %\clearpage%
 {
 %\hyphenpenalty=10000
@@ -63,3 +67,32 @@ v některých pádech.
 
 \emph{Pomůcka pro množné číslo:} V množném čísle se vzor studenx
 shoduje se vzory „píseň“ a „růže“.
+
+\subsection{Vzor Opera}
+
+Podstatná jména pátého rodu zakončená -a (především vlastní jména osob)
+se v čísle jednotném skloňují podle vzoru Opera (Opera je nebinární démon
+z anime „Mairimashita! Iruma-kun“). V čísle množném se neskloňují
+a zůstávají ve tvaru prvního pádu čísla jednotného.
+
+{
+%\hyphenpenalty=10000
+\begin{longtabu}spread1pt{|X[1,r]|X[1,r]|X[2,l]|X[2,l]|X[2,l]|}
+\hline%
+\textbf{pád}&\mbox{}&\textbf{vz. Opera}&\textbf{vz. žena}&\textbf{vz. \ifgmelse{}{„}předseda\ifgmelse{}{“}}\\\hline\endhead%
+1.&&Opera&\itshape žena&\itshape předseda\ifgmelse{}{-muž}\\\hline%
+2.&(bez)&Opery&\itshape ženy&\itshape předsedy\ifgmelse{}{-muže}\\\hline%
+3.&(k)&Opeřevi&\itshape ženě&\itshape předsedovi\ifgmelse{}{-muži}\\\hline%
+4.&(pro)&Operu&\itshape ženu&\itshape předsedu\ifgmelse{}{-muže}\\\hline%
+5.&(oslov.:)&Opero!&\itshape ženo!&\itshape předsedo\ifgmelse{}{-muži}!\\\hline%
+6.&(o)&Opeřevi&\itshape ženě&\itshape předsedovi\ifgmelse{}{-muži}\\\hline%
+7.&(se)&Operou&\itshape ženou&\itshape předsedou\ifgmelse{}{-mužem}\\\hline%
+\end{longtabu}
+}
+
+\emph{Praktická poznámka:} U vzoru Opera lze (kromě třetího a šestého pádu)
+očekávat tendenci k intepretaci jako příznaku ženství, což vyplývá
+z toho, že „žena“ je výrazně frekventovanější vzor než „předseda“
+a ten je zase frekventovanější než „Opera“. V době psaní tohoto textu mi
+není jasno, do jaké míry je to problém a co se proti tomu dá dělat.
+Uvítám zkušenosti uživatexí.
