--- a/mluvnice/07-závěr.tex
+++ b/mluvnice/07-závěr.tex
@@ -69,8 +69,8 @@ Jeho použití je naopak v pořádku u nepočeštěných jmen anglických
 (např. „Virginia Woolf“, „George Bush“), protože ta rod odpovídající
 tomu v češtině nemají. Rovněž lze použití pátého rodu považovat za vhodné
 u jmen vícerodých či rodem kolísajících (např. Alex či Singularis),
-je-li vhodné je neskloňovat nebo končí-li -x či -ks, takže je možné je skloňovat
-dle vzoru studenx.
+je-li vhodné je neskloňovat nebo končí-li -x, -ks či -a, takže je možné
+je skloňovat dle vzoru studenx nebo Opera.
 
 K rodu pátému lze také přejít tam, kde již mluvnická shoda není nutná
 a je možná „shoda podle smyslu“, tedy zpravidla v následujícím souvětí, např.:
@@ -100,6 +100,11 @@ Pro tvary pátého rodu to v praxi znamená, že „x“ vyslovíte vždy „ks
 s výjimkou případů, kdy je ve slabice, jejíž poslední souhláska je znělá
 (b, d, ď, g, h, j, l, m, n, ň, r, v, z, ž) jako ve slově „xdo“;
 v těchto případech se vysloví zněle „gz“, proto se „xdo“ čte „gzdo“.
+
+Od jineu uživatexe se mi dostalo zprávy, že koncovka přídavných jmen
+-eu má tendenci být slyšena jako -ou a chápána jako ženská. Doporučuji
+tomu bránit dlouhou výslovností (tzn. vyslovovat ji jako „-éu“, aby zněla
+víc jako „-ému“ bez „m“).
 
 \section{Poznámky a detaily}
 \begin{itemize}
