--- a/mluvnice/00-úvod.tex
+++ b/mluvnice/00-úvod.tex
@@ -53,7 +53,7 @@
 \begin{center}%
 {\Huge\bfseries PÁTÝ ROD\\}\medskip%
 Návrh podle: Singularis\\%
-Verze: 1.2 (červen 2023)
+Verze: 1.3 (září 2023)
 \end{center}%
 \bigskip%
 %
@@ -178,7 +178,7 @@ a zacházet s ním tak, jen pokud splňuje všechny následující podmínky:
 
 \subsection{Zakončení -x, resp. -ks}
 
-Zakončení podstatných jmen pátého rodu lze psát -x nebo -ks bez rozdílu
+Zakončení obecných podstatných jmen pátého rodu lze psát -x nebo -ks bez rozdílu
 významu, tzn. např. „studenx“ („bez studenxe“) a „studenks“ („bez studenkse“)
 jsou totéž slovo, jen jinak zapsané. Toto neplatí pro vlastní jména
 v pátém rodě, u nich je třeba dodržet konkrétní pravopisný zápis.
