--- a/mluvnice/06-slovotvorba.tex
+++ b/mluvnice/06-slovotvorba.tex
@@ -9,6 +9,7 @@
 % https://creativecommons.org/licenses/by-sa/4.0/
 %
 
+\clearpage
 \section{Slovotvorba z existujících názvů osob}
 
 Vycházíme-li ze zpodstatnělého přídavného jména\ifgmelse{\mbox{} (např. „hajný“, „komoří“, „rozhodčí“, „vyučující“)}{},
